# conditioner

./: .env.example  .gitignore  .tool-versions  CLAUDE.md  README.md  TASKS.md  pyproject.toml  skills-lock.json  wrangler.jsonc  yoyo.ini
migrations/: 0002_create_google_credentials.py  0003_create_wearable_daily_metrics.py  0006_create_workouts.py  0008_create_equipment.py
migrations/d1/: 0001_create_users.sql  0003_create_wearable_daily_metrics.sql  0009_add_initial_perceived_fitness_to_constraints.sql  0010_create_fitness_levels.sql  0011_add_warmup_cooldown_to_constraints.sql  0012_add_phase_to_exercises.sql  0013_create_exercise_catalog.sql  0014_add_blocks.sql
migrations/sqlite/: 0001_create_users.py  0004_create_questionnaire_responses.py  0005_create_readiness_scores.py  0007_create_workout_constraints.py  0009_add_initial_perceived_fitness_to_constraints.py  0010_create_fitness_levels.py  0011_add_warmup_cooldown_to_constraints.py  0012_add_phase_to_exercises.py  0013_create_exercise_catalog.py  0014_add_blocks.py
migrations_d1/: 0002_create_google_credentials.sql  0004_create_questionnaire_responses.sql  0005_create_readiness_scores.sql  0006_create_workouts.sql  0007_create_workout_constraints.sql  0008_create_equipment.sql
scripts/: e2e_flow.py  migrate_d1.sh  run_scenarios.py  sync_wearables.py
src/conditioner/api/: auth.py  dependencies.py  main.py  questionnaire.py
src/conditioner/api/dto/: auth.py  constraints.py  equipment.py  exercise_catalog.py  fitness_level.py  questionnaire.py  readiness.py  workouts.py
src/conditioner/shared/: config.py  constants.py
tests/: conftest.py
tests/api/: test_auth.py  test_constraints.py  test_dependencies.py  test_equipment.py  test_fitness_level.py  test_questionnaire.py  test_readiness.py  test_workouts.py
tests/core/domain/: test_constraints.py  test_readiness.py
tests/core/services/: test_access_tokens.py  test_jwt_tokens.py  test_oauth_state.py  test_readiness.py  test_token_cipher.py
(+107 files in other folders)
