[project]
name = "conditioner"
version = "0.1.0"
description = ""
authors = [
    {name = "Simone Rosani",email = "simone.rosani@aitek.it"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn[standard] (>=0.51.0,<0.52.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "yoyo-migrations (>=9.0.0,<10.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "conditioner", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "ruff (>=0.15.21,<0.16.0)",
    "mypy (>=2.3.0,<3.0.0)"
]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["conditioner"]
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
